      tbl_relation.php, tbl_select.php, libraries/database_interface.lib.php, 
      libraries/db_table_exists.lib.php, libraries/mysql_charsets.lib.php, 
      libraries/relation.lib.php, libraries/dbi/mysqli.dbi.lib.php:
      Changed some queries to use MYSQLI_STORE_RESULT. phpMyAdmin now works
      with MYSQLI_USE_RESULT as default.
    
2004-04-07 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php, lang/*: feature 788608: new features for Search:
      DISTINCT, IS NULL, IS NOT NULL, NOT LIKE, multiple select for ENUM,
      and column title is now Operator, thanks to Philippe Jausions (jausions)

2004-04-08 Marcel Tschopp <marcel.tschopp@gmx.net>
    * phpinfo.php, tbl_relation.php, libraries/display_tbl.lib.php
      libraries/mysql_wrappers.lib.php, libraries/dbi/mysql.dbi.lib.php
      libraries/dbi/mysqli.dbi.lib.php, libraries/export/*.php:
      phpMyAdmin should now be fully compatible with the new mysqli
      extension. All extension specific functions are wrapped now.
    * libraries/dbi/mysqli.dbi.lib.php: code optimizations
    * tbl_replace.php: bug 926986, "multi-edit: updates completely ignored",
      thanks to Wandering Zombie (wanderingzombie).

2004-04-07 Marcel Tschopp <marcel.tschopp@gmx.net>
    * multi_submits.inc.php, lang/german: bug 930714, wrong spelling and 
      query display. Thanks to Daniel Marschall (blackdrake)

2004-04-07 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, bug 931034, big numbers data entry,
      thanks to Dmitry (yrtimd)
    * tbl_row_delete.php, libraries/display_tbl.lib.php: bug 921939,
      problem with multi-row delete and quotes in WHERE clause,
      thanks to Ryan Schmidt (ryandesign)

2004-04-06 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, complete the fix for bug 922054

2004-04-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/polish: Updated, thanks to Jakub Wilk (ubanus).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).