@@ -92,6 +92,7 @@ function PMA_DBI_select_db($dbname, $link = NULL) {
 }
 
 function PMA_DBI_try_query($query, $link = NULL, $options = 0) {
+    //print_r(debug_backtrace());
     if ($options == ($options | PMA_DBI_QUERY_STORE)) {
         $method = MYSQLI_STORE_RESULT;
     } elseif ($options == ($options | PMA_DBI_QUERY_UNBUFFERED)) {
